--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,250 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* Variables para la barra de accesibilidad */
+:root {
+  --color-fontAC: #333333;
+  --color-principalAC: #31539e;
+  --color-secundarioAC: #31539e;
+  --color-fondoAC: #fff;
+  --resalto-linksAC: #ffff00;
+  --color-resaltoFondoAC: #000;
+  --widthContenedorAC: 240px;
+  --tamanoTituloAC: 20px; /* Aumentado para más espacio visual */
+  --tamanoTextoAC: 16px; /* Aumentado para más espacio visual */
+  --tamanoIconosAC: 15px; /* Aumentado para más espacio visual */
+  --LogoContenedorAC: 60px;
+  --tamanoLogoAC: 30px;
+  --colorGradient1: #89e5ff;
+  --colorGradient2: #5468ff;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* Fuentes personalizadas */
+@font-face {
+  font-family: "govco-font";
+  src: url("../public/Assets/fonts/govco-font-icons.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "OpenDyslexic";
+  src: url("../public/Assets/fonts/OpenDyslexic-Regular.otf");
+}
+
+/* Contenedor Principal */
+.accessibilityBar {
+  height: 100px; /* Ajusta el valor según sea necesario */
+  position: fixed; /* Fija la barra para que siempre esté visible */
+  bottom: 60%; /* Asegúrate de que esté en la parte superior de la página */
+  right: 0%;
+  z-index: 1000; /* Asegúrate de que esté encima de otros elementos */
+}
+
+/* Eliminar borde al enfocar la barra */
+.accessibilityBar:focus {
+  border: none !important;
+}
+
+/* Contenedor de la imagen del logo */
+.accessibilityBar__figure {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: var(--LogoContenedorAC);
+  height: var(--LogoContenedorAC);
+  cursor: pointer;
+  background: #15287c;
+  box-shadow: 0px 0.01em 0.01em rgba(45, 35, 66, 0.4),
+    0px 0.3em 0.7em -0.01em rgba(45, 35, 66, 0.3),
+    inset 0px -0.01em 0px rgba(58, 65, 111, 0.5);
+  transition: box-shadow 0.3s, filter 0.3s;
+  overflow: hidden;
+  border-radius: 8px 0 0 8px;
+  border: 1px solid var(--color-principalAC);
+  backdrop-filter: blur(8px);
+}
+
+/* Efecto hover para el logo */
+.accessibilityBar__figure:hover {
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.7),
+    0 0 20px rgba(255, 255, 255, 0.5), 0 0 30px rgba(255, 255, 255, 0.3);
+  filter: brightness(1.3);
+}
+
+/* Logo de Accesibilidad */
+.accessibilityBar__logo {
+  width: var(--tamanoLogoAC);
+  transition: transform 0.2s;
+  pointer-events: none;
+}
+
+/* Efecto de rotación en el logo */
+.accessibilityBar__figure:hover > .accessibilityBar__logo {
+  transform: translateY(-5px);
+}
+
+/* Contenedor de opciones y título */
+.accessibilityBar__content {
+  background: #fff;
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  color: var(--color-fontAC);
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* Cambiado para centrar verticalmente */
+  justify-content: center; /* Cambiado para centrar horizontalmente */
+  width: var(--widthContenedorAC);
+  padding: 14px; /* Aumentado para más espacio */
+  border-radius: 0 8px 8px 8px;
+}
+
+/* Título principal */
+.accessibilityBar__title {
+  font-size: var(--tamanoTituloAC);
+  margin: 15px 0 20px; /* Aumentado para más espacio */
+  font-weight: 700;
+  color: var(--color-principalAC);
+  font-family: "WorkSans", sans-serif;
+}
+
+/* Opciones de la barra */
+.accessibilityBar__options {
+  display: flex;
+  flex-direction: column;
+  row-gap: 16px; /* Aumentado para más espacio */
+}
+
+/* Párrafos de las opciones */
+.accessibilityBar__p {
+  font-size: var(--tamanoTextoAC);
+  color: var(--color-fontAC);
+  transition: 0.4s;
+}
+
+/* Opciones individuales */
+.accessibilityBar__option {
+  display: flex;
+  align-items: baseline;
+  cursor: pointer;
+  transition: 400ms;
+}
+
+/* Efecto hover para opciones */
+.accessibilityBar__option:hover .accessibilityBar__p {
+  text-decoration: underline;
+}
+
+/* Estado activo de la barra */
+.accessibilityBar--active {
+  transform: translateX(0%);
+}
+
+/* Mantener la posición del contenido de la página */
+body {
+  top: 0px !important;
+}
+
+/* Clases para estilos de accesibilidad */
+.high-contrast {
+  filter: invert(100%);
+  background-color: #000 !important;
+}
+
+.gray-scale {
+  filter: grayscale(1);
+}
+
+.font-dyslexic {
+  font-family: "OpenDyslexic", sans-serif !important;
+}
+
+.big-cursor * {
+  cursor: url("../public/Assets/images/bigcursor.svg"), auto !important;
+}
+
+/* Resaltar enlaces */
+.src_highlightLink {
+  background-color: var(--color-resaltoFondoAC) !important;
+  color: var(--resalto-linksAC) !important;
+  text-decoration: underline !important;
+}
+
+/* Iconos */
+.accessibilityBar__icon {
+  color: var(--color-secundarioAC);
+  font-size: var(--tamanoIconosAC);
+  font-family: "govco-font", sans-serif !important;
+  margin-right: 10px;
+  pointer-events: none;
+}
+
+/* Animaciones */
+@keyframes itemFade {
+  from {
+    opacity: 0;
+    transform: translateX(70px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+/* Contenido de iconos */
+
+.accessibilityBar__icon--maximize:before {
+  content: "\eae0";
+}
+.accessibilityBar__icon--minimize:before {
+  content: "\eadf";
+}
+.accessibilityBar__icon--more_spacing:before {
+  content: "\ec29";
+}
+.accessibilityBar__icon--less_spacing:before {
+  content: "\ec2a";
+}
+.accessibilityBar__icon--bar_gray:before {
+  content: "\e83d";
+}
+.accessibilityBar__icon--contrast:before {
+  content: "\e803";
+}
+.accessibilityBar__icon--dyslexic:before {
+  content: "\e96d";
+}
+.accessibilityBar__icon--cursor:before {
+  content: "\ec44";
+}
+.accessibilityBar__icon--translate:before {
+  content: "\ea02";
+}
+.accessibilityBar__icon--link:before {
+  content: "\ea14";
+}
+.accessibilityBar__icon--restart:before {
+  content: "\eb9b";
+}
+.accessibilityBar__icon--centro_relevo:before {
+  content: "\e9b6";
+}
+
+/* Cuerpo con clases de accesibilidad */
+body.high-contrast {
+  filter: invert(100%);
+  background-color: #000 !important;
+}
+
+body.gray-scale {
+  filter: grayscale(1);
+}
+
+body.font-dyslexic {
+  font-family: "OpenDyslexic", sans-serif !important;
+}
+
+body.big-cursor * {
+  cursor: url("../public/Assets/images/bigcursor.svg"), auto !important;
+}
+
+body.highlight-links a {
+  background-color: var(--color-resaltoFondoAC) !important;
+  color: var(--resalto-linksAC) !important;
+  text-decoration: underline !important;
 }
